libs/error-stack/tests/snapshots/test_debug__full__hook_provider.snap
---
source: tests/test_debug.rs
expression: "format!(\"{report:?}\")"
---
context D
├╴usize: 420
├╴&'static str: Invalid User Input
├╴at tests/test_debug.rs:588:38
│
╰─▶ root error
    ├╴at tests/common.rs:4:5
    ├╴backtrace (1)
    ╰╴span trace with 2 frames (1)

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

backtrace no. 1
  [redacted]

span trace No. 1
  [redacted]
