libs/error-stack/tests/snapshots/test_debug__full__multiline.snap
---
source: libs/error-stack/tests/test_debug.rs
expression: "format!(\"{report:#?}\")"
---
root error
├╴at libs/error-stack/tests/common.rs:9:5
├╴backtrace (1)
├╴span trace with 2 frames (1)
├╴A multiline
│ attachment
│ that might have some
│ additional info
╰╴A multiline
  attachment
  that might have some
  additional info

━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

backtrace no. 1
  [redacted]

span trace No. 1
  [redacted]
